# hypertube

./: .gitignore  CMakeLists.txt  README.md  verify_sync_logic
.github/workflows/: build_and_test.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  hypertube
_codeql_build_dir/config/: settings.json  torrents.json
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  config_tests  config_tests[1]_include.cmake  config_tests[1]_tests.cmake  unit_tests  unit_tests[1]_include.cmake  unit_tests[1]_tests.cmake
config/: default_layout.ini  settings.json
include/: Result.hpp
include/app/: App.hpp  ConfigManager.hpp  SearchEngine.hpp  SearchProvider.hpp  TorrentManager.hpp  app.hpp  config_manager.hpp  torrent_manager.hpp
include/ui/: LogsUI.hpp  ModalDialogs.hpp  SearchUI.hpp  Theme.hpp  TorrentDetailsUI.hpp  TorrentTableUI.hpp  UIManager.hpp  main_window.hpp  ui.hpp
include/utils/: StringUtils.hpp  SystemUtils.hpp
src/: main.cpp
src/app/: App.cpp  ConfigManager.cpp  SearchEngine.cpp  SearchProvider.cpp  TorrentManager.cpp  app.cpp  config_manager.cpp  torrent_manager.cpp
src/ui/: LogsUI.cpp  ModalDialogs.cpp  SearchUI.cpp  Theme.cpp  TorrentDetailsUI.cpp  TorrentTableUI.cpp  UIManager.cpp  main_window.cpp  ui.cpp
src/utils/: StringUtils.cpp  SystemUtils.cpp
tests/: CMakeLists.txt  benchmark_favorites.cpp  benchmark_locking_proxy.cpp  benchmark_logs.cpp  test_config_manager.cpp  test_path_sanitization.cpp  test_search_engine.cpp  test_string_utils.cpp
